@@ -40,6 +40,8 @@ bio-processing-green=Green algae processing
 sb-bio-processing-advanced=Advanced algae processing
 sct-lab-lab2=Exoplanetary Studies Lab
 angels-coal-processing=Charcoal processing
+ftl-theory-D=Theoretical faster than light travel part D2
+ftl-theory-D2=Faster than light theory E
 
 [technology-description]
 sb-startup1=Crushed saphirite can be smelted to iron plates. Crushed stiratite can be smelted to copper plates.
@@ -47,6 +49,8 @@ sb-startup2=Grow brown algae in an algae farm. Brown algae can be crafted into a
 sb-startup3=Craft a basic circuit board. Basic circuit boards are required to craft most machines.
 alloy-processing=
 sct-lab-lab2=Exoplanetary Studies Lab
+ftl-theory-D=Theoretical faster than light travel part D2 - logistics bias
+ftl-theory-D2=Theoretical faster than light travel part E
 
 [item-description]
 sb-angelsore3-tool=Collect crushed stiratite ore from a burner ore crusher to complete this research
